<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/ic_favorite"
        android:orderInCategory="100"
        android:title="@string/favorites_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="101"
        android:title="@string/refresh_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/searchView"
        android:title="@string/search_title"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_toggle_theme"
        android:icon="@drawable/dark_mode"
        android:title="@string/dark_mode"
        app:showAsAction="always" />
</menu>
