<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding">

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/imageview_height"
        android:layout_gravity="center"
        android:scaleType="centerCrop" />

    <Button
        android:id="@+id/btnHomeScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_home_screen"
        android:layout_marginTop="@dimen/button_margin_top"/>

    <Button
        android:id="@+id/btnLockScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_lock_screen"
        android:layout_marginTop="@dimen/button_margin_top"/>

    <Button
        android:id="@+id/btnBoth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_both"
        android:layout_marginTop="@dimen/button_margin_top"/>

    <Button
        android:id="@+id/btnFavorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin_top"
        android:text="@string/add_to_favorites" />
</LinearLayout>
